# containered-lambda-template

./: .dev.env  .dockerignore  .flake8  .gitignore  Dockerfile  app.py  buildspec.yml  docker-compose.yml  pyproject.toml  readme.md
lib/: aws_kms.py  log.py
