[tool.poetry]
name = "{APP_NAME}"
version = "0.1.0"
description = ""
authors = ["swx-sai <124345558+hiromitsu-sai@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.26.66"
types-requests = "^2.28.11.12"
types-pytz = "^2022.7.1.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.0.0"
autoflake = "^2.0.1"
isort = "^5.12.0"
pytest = "^7.2.1"
black = "^23.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
